# DiscVerSt

./: Dockerfile  LICENSE.md  README.md  README.txt  pyproject.toml  requirements.txt  setup.py
PycharmProjects/Vertical_structure/: README.md  calc.py  vs.py
Vertical_structure/: MAIN.py  Plots.py  mesa_vs.py  test.py  vs.py
alpha_disc/: __init__.py  mesa_vs.py  profiles.py
disc_verst/: mesa_vs.py  profiles.py  vs.py
